[package]
name = "aeco-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
aeco-archive = { path = "../" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"